[package]
name = "scissors"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
serde = "1.0"
osu-api = { git = "https://github.com/TicClick/osu-api" }
regex = "1.6.0"
